tests/sksl/errors/golden/BinaryInvalidType.glsl
### Compilation failed:

error: 2: type mismatch: '*' cannot operate on '<INVALID>', 'int'
error: 6: type mismatch: '*' cannot operate on 'int', '<INVALID>'
error: 10: type mismatch: '*' cannot operate on '<INVALID>', '<INVALID>'
error: 17: type mismatch: '*' cannot operate on 'S', 'int'
error: 21: type mismatch: '*' cannot operate on 'int', 'S'
error: 25: type mismatch: '*' cannot operate on 'S', 'S'
error: 31: type mismatch: '*' cannot operate on 'sampler2D', 'int'
error: 35: type mismatch: '*' cannot operate on 'int', 'sampler2D'
error: 39: type mismatch: '*' cannot operate on 'sampler2D', 'sampler2D'
error: 45: type mismatch: '*' cannot operate on 'int[1]', 'int'
error: 49: type mismatch: '*' cannot operate on 'int', 'int[1]'
error: 53: type mismatch: '*' cannot operate on 'int[1]', 'int[1]'
12 errors
